# mcp

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
src/: config.py  embeddings.py  server.py
src/mcp-server-mariadb-vector/: server.py
src/mcp_server_mariadb_vector/: app_context.py  server.py  settings.py
src/mcp_server_mariadb_vector/embeddings/: base.py  factory.py  openai.py  test.py
src/tests/: test_mcp_server.py
tests/: README.md  test_mariadb_mcp_tools.py  test_server.py
