[project]
name = "mcp-server-mariadb-vector"
version = "0.1.0"
description = "MCP server for MariaDB vector"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "mariadb==1.1.12",
    "openai",
    "pydantic",
    "fastmcp>=2.2.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[project.scripts]
mcp-server-mariadb-vector = "mcp_server_mariadb_vector.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
